hphp/hack/test/typecheck/new_inference/tconst/tconst_on_generics7.php.exp
File "tconst_on_generics7.php", line 59, characters 11-12:
Invalid argument (Typing[4110])
File "tconst_on_generics7.php", line 77, characters 21-23:
Expected int
File "tconst_on_generics7.php", line 56, characters 12-20:
But got string
File "tconst_on_generics7.php", line 59, characters 11-12:
  where '<expr#1>' is a reference to this expression
File "tconst_on_generics7.php", line 30, characters 18-23:
  resulting from expanding the type constant StringBox::T
File "tconst_on_generics7.php", line 66, characters 14-23:
Invalid argument (Typing[4110])
File "tconst_on_generics7.php", line 77, characters 21-23:
Expected int
File "tconst_on_generics7.php", line 79, characters 35-45:
But got arraykey
File "tconst_on_generics7.php", line 14, characters 18-25:
  resulting from expanding the type constant ArraykeyBox::T
File "tconst_on_generics7.php", line 72, characters 11-12:
Invalid argument (Typing[4110])
File "tconst_on_generics7.php", line 79, characters 35-45:
Expected ArraykeyBox
File "tconst_on_generics7.php", line 69, characters 13-21:
But got StringBox
